--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -139,6 +139,9 @@
           "test_port_display",
           "test_fsm_display",
           "example_v3",
+          "test_port_ultrasound_timer_trigger",
+          "test_port_ultrasound_timer_echo",
+          "test_port_ultrasound_timer_measurements",
         ]
       }
 		}
