--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -143,7 +143,7 @@
           "test_port_ultrasound_timer_echo",
           "test_port_ultrasound_timer_measurements",
           "test_fsm_ultrasound",
-          "test_port_ultrasound"
+          "test_port_ultrasound",
 
         ]
       }
